log
Fri 29 Mar 2024 10:24:45 PM UTC: 
 tests:  0|6
total_score: 0/70
1c03029
Fri 29 Mar 2024 10:33:03 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3170f73
Fri 29 Mar 2024 10:36:08 PM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  2|5
total_score: 15/70
8915f9c
Fri 29 Mar 2024 10:41:52 PM UTC: 
 list.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
251517f
Fri 29 Mar 2024 10:43:20 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  6|4
total_score: 25/70
bf94e09
Fri 29 Mar 2024 10:45:48 PM UTC: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  9|3
total_score: 35/70
fd29573
Fri 29 Mar 2024 10:49:38 PM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  9|3
total_score: 35/70
3b4739d
Fri 29 Mar 2024 10:55:10 PM UTC: 
 list.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
79416dd
Fri 29 Mar 2024 11:00:46 PM UTC: 
 list.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:5:
list.c: In function ‘popFront’:
list.c:147:12: error: unused variable ‘aux’ [-Werror=unused-variable]
  147 |     Node * aux = list->head;
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
cddd4c6
Fri 29 Mar 2024 11:03:42 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
9dde34b
